# transpose

./: .gitignore  CMakePresets.json  ComplexTranspose.json  README.md
AclNNInvocation/: CMakeLists.txt  README.md  main.cpp  run.sh
AclNNInvocation/scripts/: gen_data.py  print_debug_data.py  verify_result.py
AclNNInvocation/src/: CMakeLists.txt  main.cpp
ComplexTransposeMultiCore/: CMakeLists.txt  README.md  build.sh
ComplexTransposeMultiCore/op_host/: complex_transpose.cpp
ComplexTransposeMultiCore/op_kernel/: complex_transpose.cpp
ComplexTransposeMultiCore/scripts/: reference_complex_transpose.py
op_host/: complex_transpose.cpp  complex_transpose_tiling.h
